# rust-axum-crud-api

./: .env.example  Cargo.toml
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
