[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
deadpool-postgres = "0.10"
uuid = { version = "1", features = ["serde", "v4"] }
tower = "0.4"
